classDiagram
    %% PawPal+ FINAL UML — matches pawpal_system.py after implementation.

    class Owner {
        +str name
        +int available_minutes
        +dict preferences
        +list~Pet~ pets
        +add_pet(pet Pet) void
        +set_available_time(minutes int) void
        +set_preference(key str, value) void
        +all_tasks() list~Task~
    }

    class Pet {
        +str name
        +str species
        +str breed
        +list~Task~ tasks
        +add_task(task Task) void
        +remove_task(task Task) void
        +get_tasks() list~Task~
        +mark_task_complete(task Task) Task
    }

    class Task {
        +str name
        +int duration
        +str priority
        +str category
        +str recurrence
        +str preferred_time
        +bool completed
        +date due_date
        +is_high_priority() bool
        +priority_rank() int
        +mark_complete() void
        +reset() void
        +next_occurrence(from_date date) Task
    }

    class Scheduler {
        +sort_tasks(tasks list~Task~) list~Task~
        +sort_by_time(tasks list~Task~) list~Task~
        +filter_by_status(tasks list~Task~, completed bool) list~Task~
        +filter_by_pet(owner Owner, pet_name str) list~Task~
        +filter_tasks(tasks list~Task~, budget int) tuple
        +resolve_conflicts(tasks list~Task~) tuple
        +detect_conflicts(tasks list~Task~) list~str~
        +build_plan(tasks list~Task~, budget int) Plan
        +schedule_owner(owner Owner) Plan
    }

    class Plan {
        +list scheduled
        +list skipped
        +int total_time
        +add_entry(time str, task Task) void
        +add_skipped(task Task, reason str) void
        +explain() str
        +to_display() list
    }

    Owner "1" --> "*" Pet : has
    Pet "1" --> "*" Task : has
    Pet ..> Task : creates next occurrence
    Scheduler ..> Owner : reads pets & budget
    Scheduler ..> Task : sorts / filters
    Scheduler ..> Plan : produces
    Plan "1" --> "*" Task : references
